sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:10: error: not found: value fini
  fini = true;
  ^AlgCocktailSort2:14: error: not found: value fini
      fini = false;
      ^AlgCocktailSort2:21: error: not found: value fini
      fini = false;
      ^