sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var l = getNombreValeurs;
}

def sort(debut:Int, fin:Int, leftToRight:Boolean){
  var j = 0;
  

  fini = true;
  if(leftToRight) for (i <- debut to fin) {
    if (plusPetit(i+1, i)){
      echange(i,i+1);
      fini = false;
    }
  }
  else for(i <- debut to fin){
    j = fin - i + debut;
    if(plusPetit(j+1, j)){
      echange(j, j+1);
      fini = false;
    }
  }
    	
	sort(debut+1, fin-1, !leftToRight);
}